<resources>
    <string name="app_name">Pendaftaran Online</string>
    <string name="nama_poli">Nama Poli</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="status">Status</string>
    <string name="cara_bayar">Cara Bayar</string>
    <string name="no_reg">No reg</string>
    <string name="todo">TODO</string>
    <string name="bukti_pendaftaran">Bukti Pendaftaran</string>
    <string name="tanggal">Tanggal</string>
    <string name="no_rawat">No Rawat</string>
    <string name="no_rekam_medik">No Rekam Medik</string>
    <string name="tanggal_kunjungan">Tanggal Kunjungan</string>
    <string name="daftar">Daftar</string>
    <string name="kembali_kehalaman_utama">Kembali Kehalaman Utama</string>
    <string name="txtPassword">Type Password</string>
    <string name="txtShow">Show Password</string>
    <string name="rp_60_000">Rp. 60.000</string>
    <string name="_1_konsultasi_psikologi">1. Konsultasi Psikologi</string>
    <string name="pelayanan_psikologi">Tarif Pelayanan Psikologi</string>
    <string name="rp_100_000">Rp. 100.000</string>
    <string name="akomodasi_kelas_iii">Akomodasi Kelas III</string>
    <string name="rp_150_000">Rp. 150.000</string>
    <string name="akomodasi_kelas_ii">Akomodasi Kelas II</string>
    <string name="rp_200_000">Rp. 200.000</string>
    <string name="akomodasi_kelas_i">Akomodasi Kelas I</string>
    <string name="tarif_pelayanan_rawat_inap">Tarif Pelayanan Rawat Inap</string>
    <string name="rp_75_000">Rp. 75.000</string>
    <string name="pemeriksaan_dokter_spesialis">Pemeriksaan Dokter Spesialis</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="pendaftaran_pasien_lama">Pendaftaran Pasien Lama</string>
    <string name="rp_30_000">Rp. 30.000</string>
    <string name="pendaftaran_pasien_baru">Pendaftaran Pasien Baru</string>
    <string name="tarif_pelayanan_rawat_jalan">Tarif Pelayanan Rawat Jalan</string>
    <string name="_6_klik_button_daftar">7. Klik Button Daftar</string>
    <string name="_5_pilih_cara_bayar">6. Pilih Cara Bayar</string>
    <string name="_4_pilih_poli_tujuan">5. Pilih Poli Tujuan</string>
    <string name="_3_klik_button_pilih_poli">4. Klik Button Pilih Poli</string>
    <string name="_2_pilih_tanggal_kunjungan">3. Pilih Tanggal Kunjungan</string>
    <string name="_1_pilih_menu_pendaftaran">2. Pilih Menu Pendaftaran</string>
    <string name="cara_pendaftaran_online">Cara Pendaftaran Online</string>
    <string name="informasi">Informasi</string>
    <string name="pemeriksaan_tindakan_elektromedik"><![CDATA[Tarif Pemeriksaan & Tindakan
Elektromedik]]></string>
    <string name="rp_400_000">Rp. 400.000</string>
    <string name="rp_450_000">Rp. 450.000</string>
    <string name="electro_encephalo_graphy_eeg">Electro Encephalo Graphy (EEG)</string>
    <string name="tindakan_ect_pre_medikasi">Tindakan ECT PRE Medikasi</string>
    <string name="surat_keterangan_pemeriksaan_napza">Surat Keterangan Pemeriksaan Napza</string>
    <string name="tarif_mediko_legal">Tarif Mediko Legal</string>
    <string name="remember_me">Remember Me</string>
    <string name="no_rekam_medik2">No Rekam Medik</string>
    <string name="nik">NIK</string>
    <string name="sign_in">Sign in</string>
    <string name="silahkan_login_dulu">Silahkan Login Dulu</string>
    <string name="rsj_mutiara_sukma">RSJ Mutiara Sukma</string>
    <string name="jln_ahmad_yani_no_1_selagalas_mataram">Jln. Ahmad Yani No.1 Selagalas Mataram</string>
    <string name="rsj_mutiara_sukma2">RSJ Mutiara Sukma</string>
    <string name="jl_ahmad_yani_no_1_selagalas_mataram">jl Ahmad yani No.1 Selagalas Mataram</string>
    <string name="rsjmutiarasukma_gmail_com">rsjmutiarasukma@gmail.com</string>
    <string name="pesan">Pesan</string>
    <string name="subject">Subject</string>
    <string name="txalamat">txAlamat</string>
    <string name="alamat">Alamat :</string>
    <string name="txnama">txNama</string>
    <string name="nama">Nama :</string>
    <string name="txnorm">txNorm</string>
    <string name="no_rm">No.RM :</string>
    <string name="keluar">Keluar</string>
    <string name="hi_selamat_datang">Hi, Selamat Datang</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="riwayat">Riwayat</string>
    <string name="info_kamar">Info Kamar</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="kunjungi_kami">Kunjungi Kami</string>
    <string name="hi_selamat_datang2">Hi, Selamat Datang</string>
    <string name="keluar2">Keluar</string>
    <string name="no_rm2">No.RM :</string>
    <string name="txnorm2">txNorm</string>
    <string name="txnorm3">txNorm</string>
    <string name="nama3">Nama :</string>
    <string name="txnama3">txNama</string>
    <string name="alamat3">Alamat :</string>
    <string name="txalamat3">txAlamat</string>
    <string name="menu_utama3">Menu Utama</string>
    <string name="pendaftaran3">Pendaftaran</string>
    <string name="jadwal_dokter3">Jadwal Dokter</string>
    <string name="riwayat3">Riwayat</string>
    <string name="info_kamar3">Info Kamar</string>
    <string name="informasi3">Informasi</string>
    <string name="pengaduan3">Pengaduan</string>
    <string name="kunjungi_kami3">Kunjungi Kami</string>
    <string name="hi_selamat_datang3">Hi, Selamat Datang</string>
    <string name="keluar3">Keluar</string>
    <string name="no_rm3">No.RM :</string>
    <string name="todo2">TODO</string>
    <string name="pilih_poli_tujuan">Pilih Poli Tujuan</string>
    <string name="_2_pemeriksaan_psikologi_dan_psikometri">2. Pemeriksaan Psikologi dan Psikometri :</string>
    <string name="tes_iq_sederhana">Tes IQ Sederhana</string>
    <string name="surat_keterangan_sehat_jiwa_untuk_keperluan_administrasi_umum_cpns_notaris_sekolah_mmpi_rf">Surat Keterangan Sehat Jiwa Untuk Keperluan Administrasi Umum (CPNS, Notaris, Sekolah) MMPI RF</string>
    <string name="surat_keterangan_kecakapan_mental_layak_kerja_layak_study_layak_adopsi_pengampuan_hak_asuh_nidn_k_mmpi_dx">Surat Keterangan Kecakapan Mental (Layak Kerja, Layak Study, Layak Adopsi, Pengampuan, Hak Asuh, NIDN/K) MMPI DX</string>
    <string name="silahkan_pilih_layanan">Silahkan Pilih Layanan</string>
    <string name="informasi_layanan">Informasi Layanan</string>
    <string name="_1_pilih_layanan_poliklinik">1. Pilih Layanan Poliklinik</string>
    <string name="tanggal_kunjungan2">Tanggal Kunjungan</string>
</resources>