<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua"
    tools:context="com.rsjms.daftar.login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/layoutLogo"
        android:layout_marginTop="90dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/logopreview"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rsj_mutiara_sukma2"
        android:textSize="18sp"
        android:id="@+id/namaRS"
        android:textColor="#2F4F4F"
        android:layout_below="@id/layoutLogo"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jl_ahmad_yani_no_1_selagalas_mataram"
        android:layout_below="@id/namaRS"
        android:textColor="#2F4F4F"
        android:id="@+id/jalan"
        android:textSize="14sp"
        android:gravity="center_horizontal"/>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jalan"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20sp"
        android:background="@drawable/blue_background"
        app:cardCornerRadius="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/white_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/silahkan_login_dulu"
                android:textColor="#2F4F4F"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/txNorm"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="5dp"
                android:hint="@string/no_rekam_medik2"
                android:paddingStart="5dp"
                android:paddingEnd="20dp"
                android:textColor="#000"
                android:textColorHint="#B6B6B4" />


            <EditText
                android:id="@+id/txNIK"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="5dp"
                android:hint="@string/nik"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                android:paddingEnd="20dp"
                android:textColor="#000"
                android:textColorHint="#B6B6B4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkPass"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:text="@string/txtShow"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkRememmber"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="20sp"
                    android:text="@string/remember_me"
                    android:textColor="#000" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_back"
                    android:shadowRadius="30"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>