<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:background="#EEEEEE"
    tools:context="com.rsjms.daftar.Daftar">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/man"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9"
                    />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="daftarNoRM"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="@+id/imageView10"
                    app:layout_constraintStart_toStartOf="@+id/imageView10"
                    app:layout_constraintTop_toBottomOf="@+id/imageView10" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="daftarNama"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#fff"
                        app:cardCornerRadius="10sp">
                        <EditText
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:layout_height="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:hint="@string/no_rekam_medik"
                            android:id="@+id/txno_rm"
                            android:textColor="#000"
                            android:background="@drawable/white_background"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10sp"
                        app:cardBackgroundColor="#fff"
                        android:layout_marginTop="10dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:layout_height="50dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:hint="@string/tanggal_kunjungan"
                            android:id="@+id/tgl"
                            android:textColor="#000"
                            android:background="@drawable/white_background"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10sp"
                        app:cardBackgroundColor="#fff"
                        android:layout_marginTop="10dp">

                        <Spinner
                            android:id="@+id/spinpilihPoli"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#B6B6B4">

                        </Spinner>

                        <ImageButton
                            android:id="@+id/menu1"
                            android:layout_width="30dp"
                            android:layout_height="50dp"
                            android:layout_gravity="right"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
                    </androidx.cardview.widget.CardView>


                    <Spinner
                        android:id="@+id/idspinPOLI"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:visibility="gone"
                        android:layout_marginRight="20dp" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10sp"
                    app:cardBackgroundColor="#fff"
                    android:layout_marginTop="10dp">
                    <Spinner
                        android:id="@+id/spinDokter"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#B6B6B4" />
                </androidx.cardview.widget.CardView>

                    <Spinner
                        android:id="@+id/spinIdDokter"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        android:layout_marginRight="20dp"/>


                    <Spinner
                        android:id="@+id/idspinCara"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        android:layout_marginRight="20dp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10sp"
                        app:cardBackgroundColor="#fff"
                        android:layout_marginTop="10dp">
                    <Spinner
                        android:id="@+id/spinCarabayar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#B6B6B4"/>

                        <ImageButton
                            android:id="@+id/menu2"
                            android:layout_width="30dp"
                            android:layout_height="50dp"
                            android:layout_gravity="right"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
                    </androidx.cardview.widget.CardView>



                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/klikDaftar"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/button_back"
                            android:elevation="3dp"
                            android:text="@string/daftar"
                            android:textColor="#ffffff"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>